# TRPG-JSON

./: .gitignore  AGENTS.md  DESIGN_GUIDE.md  LICENSE  README.md  SPELL_PALETTE_IMPLEMENTATION.md  SPELL_PALETTE_TESTS.md  opencode.json  tasks.md
config/: default.toml
data/sample/: monsters_sample.json  spells_sample.json
rust/: Cargo.toml
rust/app/: Cargo.toml
rust/app/src/: main.rs  utils.rs
rust/app/src/commands/: mod.rs  monster.rs  spell.rs
rust/core/: Cargo.toml
rust/core/src/: config.rs  io.rs  lib.rs  query.rs  stats.rs
rust/core/src/export/: auth.rs  google_sheets.rs  json.rs  mod.rs  palette.rs  sheets.rs  sheets_api.rs
rust/core/src/export/udonarium/: data_transformer.rs  mod.rs  part_namer.rs  xml_generator.rs  zip_writer.rs
schema/: spell.json  spell_array.json
