[package]
name = "trpg-gm"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
trpg-json-core = { path = "../core" }
dirs = "6.0.0"

[[bin]]
name = "gm"   # 実行コマンド名
path = "src/main.rs"
