[package]
name = "trpg-json-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
google-sheets4 = "5"
oauth2 = "4"
yup-oauth2 = "8"
tokio = { version = "1", features = ["full"] }
hyper = "1"
hyper-util = "0.1"
futures = "0.3"
tiny_http = "0.12"
url = "2"
webbrowser = "0.8"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3"
